Closed
Bug 565248
Opened 15 years ago
Closed 15 years ago
"ABORT: negative lengths and percents should be rejected by parser"
Categories
(Core :: CSS Parsing and Computation, defect, P4)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a5
People
(Reporter: jruderman, Assigned: dbaron)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
66 bytes,
text/html
|
Details | |
1.62 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
###!!! ABORT: negative lengths and percents should be rejected by parser: 'aFontData.mSize.IsCalcUnit()', file /home/jruderman/mozilla-central/layout/style/nsRuleNode.cpp, line 2777
This abort was added as part of adding calc() support in bug 363249.
Assignee | ||
Comment 1•15 years ago
|
||
I think this is "correct", although I'm not sure if it's really what we want. (And we'll probably cap the font size somewhere else down the pipe...)
Attachment #444834 -
Flags: review?(roc) → review+
Assignee | ||
Comment 2•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
OS: Linux → All
Priority: -- → P4
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in
before you can comment on or make changes to this bug.
Description
•