Avoid wrapping to negative font sizes.  (Bug 565248)  r=roc